--- a/css/styless.css
+++ b/css/styless.css
@@ -1,6 +1,3 @@
-.hear{
-    background-color: chocolate;
-}
 .row-header{
     margin: 0px auto;
     padding: 0px auto;
@@ -22,13 +19,15 @@
     margin: 0px auto;
     padding: 20px 0px 20px 0px;
 }
-.hist{
-    margin-top: 50px;
-    margin-bottom: 70px;
-}
 
 .address{
     font-size: 80%;
     margin: 0px;
     color: #0f0f0f;
+}
+.hist{
+    margin: 30px 0px 30px 0px;
+}
+.leader{
+    margin: 25px 0px 25px 0px;
 }
