--- a/css/styles.scss
+++ b/css/styles.scss
@@ -20,6 +20,7 @@ $carousel-item-height: 300px;
     min-height:400px;
 }
 
+    
 .footer{
     background-color: $background-pale;
     @include zero-margin(20px, 0px);
@@ -71,4 +72,11 @@ body{
     position: absolute;
     bottom: 0px;
     z-index: 1;
+}
+
+.modal-header{
+    background-color:$background-dark;  
+}
+.modal-body{
+    background-color: $background-pale;
 }
