--- a/css/styles.css
+++ b/css/styles.css
@@ -53,8 +53,11 @@ body {
   bottom: 0px;
   z-index: 1; }
 
-.modal-header {
-  background-color: #512DA8; }
-
-.modal-body {
+.modal .modal-body {
   background-color: #D1C4E9; }
+
+.modal .modal-header {
+  color: floralwhite;
+  background: #512DA8; }
+  .modal .modal-header .close {
+    color: floralwhite; }
