--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,9 +74,17 @@ body{
     z-index: 1;
 }
 
-.modal-header{
-    background-color:$background-dark;  
-}
-.modal-body{
-    background-color: $background-pale;
+.modal {
+    .modal-body {
+        background-color: $background-pale;
+    }
+
+    .modal-header {
+        color: floralwhite;
+        background: $background-dark;
+
+        .close {
+            color: floralwhite;
+        }
+    }
 }
